--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -214,13 +214,13 @@
                                 <div class="pup_content_text" style="margin-top:30px;padding-left:0px;">
                                     <div class="text_row">
                                         <div class="text_item">
-                                            <div class="text_item_title h6 font_bold emphasize_text">三、使用旅程</div>
-                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">測試時複盤的回饋統整。</div>
+                                            <div class="text_item_title h6 font_bold emphasize_text">三、步驟任務</div>
+                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">ASQ方式詢問，量化每一步驟的操作感受。</div>
                                             <div>
                                                 <picture>
-                                                    <source media="(max-width:768px)" srcset="images/sino_pic_14-2-768.png" />
-                                                    <source media="(max-width:1024px)" srcset="images/sino_pic_14-2-1024.png" />
-                                                    <img src="images/sino_pic_14-2.png" class="sino_pic_6">
+                                                    <source media="(max-width:768px)" srcset="images/sino_pic_14-24-768.png" />
+                                                    <source media="(max-width:1024px)" srcset="images/sino_pic_14-24-1024.png" />
+                                                    <img src="images/sino_pic_14-24.png" class="sino_pic_6">
                                                 </picture>
                                             </div>
                                         </div>
@@ -229,13 +229,13 @@
                                 <div class="pup_content_text" style="margin-top:30px;padding-left:0px;">
                                     <div class="text_row">
                                         <div class="text_item">
-                                            <div class="text_item_title h6 font_bold emphasize_text">四、步驟任務</div>
-                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">ASQ方式詢問，量化每一步驟的操作感受。</div>
+                                            <div class="text_item_title h6 font_bold emphasize_text">四、使用旅程</div>
+                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">測試複盤回饋統整。</div>
                                             <div>
                                                 <picture>
-                                                    <source media="(max-width:768px)" srcset="images/sino_pic_14-24-768.png" />
-                                                    <source media="(max-width:1024px)" srcset="images/sino_pic_14-24-1024.png" />
-                                                    <img src="images/sino_pic_14-24.png" class="sino_pic_6">
+                                                    <source media="(max-width:768px)" srcset="images/sino_pic_14-2-768.png" />
+                                                    <source media="(max-width:1024px)" srcset="images/sino_pic_14-2-1024.png" />
+                                                    <img src="images/sino_pic_14-2.png" class="sino_pic_6">
                                                 </picture>
                                             </div>
                                         </div>
