--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -138,20 +138,20 @@
                                         <div class="text_item" style="width:100%;margin-top:10px;">
                                             <div class="text_item_title h6 emphasize_text">執行要點</div>
                                             <ul class="text_item_list" style="list-style:decimal">
-                                                <li>以網頁瀏覽器模擬手機裝置尺寸，給予受測者操作完成情境目標。</li>
-                                                <li>測試人員從旁紀錄，受測者的反應(猶豫、操作錯誤...等)、完成每一步驟和目標的操作時間。</li>
-                                                <li>當使用者操作停頓時，給予思考時間後再進行詢問和幫助。</li>
+                                                <li>以瀏覽器模擬手機尺寸，給予受測者操作情境目標。</li>
+                                                <li>測試人員從旁紀錄，受測者的反應(猶豫、操作錯誤...等)、步驟和目標的完成時間。</li>
+                                                <li>當使用者操作停頓時，給予思考時間後進行詢問，仍無法接續操作則給予幫助。</li>
                                                 <li>達成情境目標(完成投保)後，依操作流程與受測者進行複盤。</li>
                                             </ul>
                                         </div>
                                         <div class="text_item" style="width:100%;margin-top:10px;">
                                             <div class="text_item_title h6 emphasize_text">複盤要點</div>
                                             <ul class="text_item_list" style="list-style:decimal">
-                                                <li>以網頁瀏覽器模擬手機裝置尺寸，由測試人員以「放聲思考法」的方式進行複盤。</li>
-                                                <li>對受測者說明「回想您先前操作過程，說明所看到的畫面、想如何點擊操作。」由測試人員執行操作複盤。</li>
-                                                <li>了解關鍵介面物件的理解，如：選單-詢問預期有什麼選項；按鈕-詢問預期點擊後會發生什麼事。</li>
-                                                <li>了解先前紀錄受測者反應，在複盤過程詢問原因。</li>
-                                                <li>ASQ方式詢問，受測者每個步驟的操作感受。</li>
+                                                <li>以瀏覽器模擬手機尺寸，由測試人員以「放聲思考法」進行複盤。</li>
+                                                <li>引導受測者「回想先前過程，說明看到的畫面、想如何點擊。」由測試人員模擬操作進行複盤。</li>
+                                                <li>了解關鍵CTA功能的理解，如：選單-預期有什麼選項；按鈕-預期點擊後會發生什麼事。</li>
+                                                <li>詢問受測者的先前反應(猶豫、操作錯誤...等)的原因。</li>
+                                                <li>ASQ方式詢問受測者，每個步驟的操作感受。</li>
                                                 <li>詢問受測者對產品的建議和原因。</li>
                                             </ul>
                                         </div>
@@ -160,10 +160,10 @@
                                         <div class="text_item">
                                             <div class="text_item_title h6 emphasize_text">測試成果</div>
                                             <ul class="text_item_list" style="list-style:disc">
-                                                <li>受測者完成每一步驟和情境目標的操作時間。</li>
-                                                <li>哪些操作點，使受測者的產生反應(猶豫、驚訝...等)其原因為何。</li>
-                                                <li>哪些操作點，使受測者操作停滯其原因為何。</li>
-                                                <li>哪些被忽略的介面物件，受測者是否有注意到。</li>
+                                                <li>受測者完成步驟和情境目標的操作時間。</li>
+                                                <li>哪些操作點，產生反應(猶豫、驚訝...等)其原因為何。</li>
+                                                <li>哪些操作點，操作停滯其原因為何。</li>
+                                                <li>哪些被忽略的CTA功能，受測者是否有注意到。</li>
                                                 <li>流程中每個步驟，受測者的操作感受。</li>
                                                 <li>達成使用目標後，受測者的操作心得。</li>
                                                 <li>了解不滿意的地方(痛點)和是否需要改善的重要性。</li>
