--- a/gapp_works_3.html
+++ b/gapp_works_3.html
@@ -74,7 +74,7 @@
 <body class="body_page gapp_works_2_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">投資交易APP&nbsp;設計稿</div>
+            <div class="h4 font_bold">投資交易APP&nbsp;設計亮點</div>
             <a href="uiux_index.html#p10_title">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
@@ -84,7 +84,7 @@
 
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#gapp_tab_3" class="set_middle"><span>規劃思維</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#gapp_tab_4" class="set_middle"><span>介面設計</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#gapp_tab_4" class="set_middle"><span>介面易用性</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
