--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -139,7 +139,7 @@
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">二、滿足各種使用情境</div>
-                        <div class="pup_normal_text">例：設計不同「申請投保」流程入口，<span class="emphasize_text">增加網站目標轉換率</span>。</div>
+                        <div class="pup_normal_text">易用性原則的運用，例：設計不同「申請投保」流程入口，<span class="emphasize_text">增加網站目標轉換率</span>。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.想直接申請投保</span>：<br />於首頁橫幅廣告設置「立即投保」按鈕。</div>
@@ -165,7 +165,7 @@
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">三、給予人性化設計</div>
-                        <div class="pup_normal_text"><span class="emphasize_text">判斷當前使用情境，即時給予功能或提示。</span></div>
+                        <div class="pup_normal_text">易用性原則的運用<span class="emphasize_text">判斷當前使用情境，即時給予功能或提示。</span></div>
                         <div class="pup_normal_text">減少操作時間和負擔，增加網站易用性。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
@@ -243,7 +243,7 @@
                                         <img src="images/sino_pic_13-9-14.png" class="sino_pic_11">
                                     </picture>
                                     <div class="pup_normal_text_small">點擊旅遊國家欄位，顯示選單視窗</div>
-                                    <div class="pup_normal_text" style="margin-top:30px;margin-bottom:5px;">選單介面設計要點</div>
+                                    <div class="emphasize_text large_text font_bold" style="margin-top:30px;margin-bottom:5px;">選單介面設計要點</div>
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-9-15-430.png" />
                                         <source media="(max-width:960px)" srcset="images/sino_pic_13-9-15-540.png" />
@@ -260,8 +260,8 @@
                         <div class="pup_normal_text">根據資訊內容，優化排版並模組化。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
-                                <div class="pup_normal_text">例：首頁保費試算表單</div>
-                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">同層級內容視覺起點分散</span>，當內容長短不同，則版面空間凌亂。</div>
+                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">把各家保險公司的方案商品，用一套介面配置</span>呈現給使用者，需深度思考版面配置。</div>
+                                <div class="pup_normal_text" style="margin-bottom:5px;">如：保費試算介面，欄位項目和理賠項目<span class="emphasize_text">內容長短不一、視覺起點分散，導致版面空間凌亂。</span></div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:768px)" srcset="images/sino_pic_13-9-1.png" />
@@ -308,7 +308,7 @@
                         </div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
-                                <div class="pup_normal_text">例：好康活動頁</div>
+                                <div class="pup_normal_text">例：網站各主題資訊頁</div>
                                 <div class="pup_normal_text" style="margin-bottom:5px;">根據內容層次，<span class="emphasize_text">設計階層式版面。</span></div>
                                 <div class="pup_normal_text_small emphasize_text" style="margin-bottom:5px;">以閱讀順序(上至下)，直覺感受內容轉換和層級歸屬</div>
                                 <div class="pup_content_pic_item_content">
