--- a/uiux_index.html
+++ b/uiux_index.html
@@ -505,23 +505,23 @@
                     <div class="info_personal_pic"></div>
                     <div class="info_personal_describe appear-animation" data-appear-animation="fadeInUp">
                         <div class="info_personal_name h3 font_bold">王俊淵 Joe Wang<span class="large_text display_none_768">76/10/15</span></div>
-                        <div class="info_personal_call h2 font_bold">資深UI.UX設計師<span>&nbsp;‧&nbsp;</span><br>產品規劃到測試迭代</div>
+                        <div class="info_personal_call h2 font_bold">資深UI.UX設計師<span>&nbsp;‧&nbsp;</span><br>產品規劃到維運迭代</div>
                         <div class="info_personal_detail display_none_768">
                             <ul>
-                                <li>職涯十年由淺至深的經驗累積。</li>
-                                <li>近三年專案，客戶皆集團企業。</li>
-                                <li>面對數位產業變化，保持學習熱忱。</li>
-                                <li>能觀察資料脈絡，依邏輯論述想法。</li>
+                                <li>需求轉化數位產品，職涯十年經驗。</li>
+                                <li>近三年專案，客戶皆集團級企業。</li>
+                                <li>能觀察資料脈絡，提出產品策略。</li>
+                                <li>熟悉易用、易讀原則，實踐產品介面。</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="info_personal_detail display_block_768 appear-animation" data-appear-animation="fadeInUp">
                     <ul>
-                        <li>職涯十年由淺至深的經驗累積。</li>
-                        <li>近三年專案，客戶皆集團企業。</li>
-                        <li>數位產業變化，保持學習熱忱。</li>
-                        <li>觀察資料脈絡，依邏輯論述想法。</li>
+                        <li>需求轉化數位產品，職涯十年經驗。</li>
+                        <li>近三年專案，客戶皆集團級企業。</li>
+                        <li>能觀察資料脈絡，提出產品策略。</li>
+                        <li>熟悉易用、易讀原則，實踐產品介面。</li>
                     </ul>
                 </div>
                 <a href="info_attribute_tell.html">
@@ -1032,20 +1032,20 @@
                     </div>
 
                     <div id="p7_title" class="work_info_part" style="margin-bottom:0px;">
-                        <div class="work_info_title h3 font_bold">個人負責工作</div>
+                        <div class="work_info_title h3 font_bold">專案執行範圍</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
-                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>網站規劃
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品規劃
                             </div>
                             <div class="work_info_subtext">
                                 進行需求訪談並定義產品面向，規劃資訊架構、頁面布局、功能機制並繪製線框稿Wireframe，協助完成PRD文件使網站開發有所依據。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_0.html">UX分析</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_0.html">UX分析-制定產品輪廓</a></span>
                             </div>
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">規劃內容</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">製作產品框架</a></span>
                                 </div>
                             </div>
                             <div class="work_info_note">
@@ -1073,7 +1073,7 @@
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">產品設計亮點</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">產品設計-易用性思維</a></span>
                                 </div>
                             </div>
                         </div>
@@ -1115,6 +1115,18 @@
                             </div>
                             <div class="work_info_note appear-animation" data-appear-animation="fadeInUp" style="font-size:16px;color:#232323;margin-top:5px;">
                                 <div><a href="sino_works_7.html"><span>*</span>運用AI工具</a>作為行動建議，解決受訪者痛點。</div>
+                            </div>
+                        </div>
+                        <div class="work_info_subpart" style="display:none;">
+                            <div class="work_info_subtitle h4 font_bold">
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品維運提案<span></span>
+                            </div>
+                            <div class="work_info_subtext">
+                                持續市場觀察、追蹤競品，同時評估產品目前型態、開發階段、優劣勢、內部資源，根據決策者制定的商業目標，在專職領域上規劃執行方案。
+                            </div>
+                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                <img src="images/pup_link_dot.png" class="pup_link_dot">
+                                <span><a href="sino_works_8.html">競品分析和執行方案</a></span>
                             </div>
                         </div>
                     </div>
