--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -83,9 +83,9 @@
         </div>
 
         <div class="pup_window_content_tab_container">
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_9" class="set_middle"><span>功能</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_10" class="set_middle"><span>介面</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_11" class="set_middle"><span>資訊</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_9" class="set_middle"><span>功能規劃</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_10" class="set_middle"><span>介面易用性</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#yulon_tab_11" class="set_middle"><span>資訊閱讀</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
