--- a/uiux_index.html
+++ b/uiux_index.html
@@ -510,7 +510,7 @@
                             <ul>
                                 <li>需求轉化數位產品，職涯十年經驗。</li>
                                 <li>近三年專案，客戶皆集團級企業。</li>
-                                <li>能觀察資料脈絡，提出產品策略。</li>
+                                <li>觀察資料脈絡，靈活提出產品策略。</li>
                                 <li>熟悉易用、易讀原則，實踐產品介面。</li>
                             </ul>
                         </div>
@@ -520,7 +520,7 @@
                     <ul>
                         <li>需求轉化數位產品，職涯十年經驗。</li>
                         <li>近三年專案，客戶皆集團級企業。</li>
-                        <li>能觀察資料脈絡，提出產品策略。</li>
+                        <li>觀察資料脈絡，靈活提出產品策略。</li>
                         <li>熟悉易用、易讀原則，實踐產品介面。</li>
                     </ul>
                 </div>
