--- a/uiux_index.html
+++ b/uiux_index.html
@@ -947,7 +947,7 @@
                     </div>
                     <div class="page_subtitle_container h3 set_middle">
                         <div>
-                            網站規劃、介面&amp;視覺設計
+                            網站產品製作
                         </div>
                         <div>
                             <picture>
@@ -956,7 +956,7 @@
                             </picture>
                         </div>
                         <div>
-                            APP規劃、介面&amp;視覺設計
+                            APP產品製作
                         </div>
                     </div>
                     <div class="page_subtitle_container h3 set_middle">
@@ -1115,18 +1115,6 @@
                             </div>
                             <div class="work_info_note appear-animation" data-appear-animation="fadeInUp" style="font-size:16px;color:#232323;margin-top:5px;">
                                 <div><a href="sino_works_7.html"><span>*</span>運用AI工具</a>作為行動建議，解決受訪者痛點。</div>
-                            </div>
-                        </div>
-                        <div class="work_info_subpart" style="display:none;">
-                            <div class="work_info_subtitle h4 font_bold">
-                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品維運提案<span></span>
-                            </div>
-                            <div class="work_info_subtext">
-                                持續市場觀察、追蹤競品，同時評估產品目前型態、開發階段、優劣勢、內部資源，根據決策者制定的商業目標，在專職領域上規劃執行方案。
-                            </div>
-                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a href="sino_works_8.html">競品分析和執行方案</a></span>
                             </div>
                         </div>
                     </div>
