--- a/uiux_index.html
+++ b/uiux_index.html
@@ -369,35 +369,35 @@
                                 <div class="list_line"></div><a id="p7_list" href="#p7" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">7</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag" style="color:#232323;">2C產品需求規劃&nbsp;→&nbsp;介面&amp;視覺設計&nbsp;→&nbsp;前端原型製作</div>
+                                <div class="list_note_tag" style="color:#232323;">產品需求規劃&nbsp;→&nbsp;介面設計、網頁原型產出&nbsp;→&nbsp;測試、維運提案</div>
                             </div>
                             <li>
                                 <div class="list_page_name">元大期貨&nbsp;槓桿交易商官網</div>
                                 <div class="list_line"></div><a id="p8_list" href="#p8" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">8</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">官網介面&amp;視覺原型</div>
+                                <div class="list_note_tag">官網視覺風格、介面設計</div>
                             </div>
                             <li>
                                 <div class="list_page_name">裕隆集團&nbsp;<br>2B員工APP&amp;管理後台</div>
                                 <div class="list_line"></div><a id="p9_list" href="#p9" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">9</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag" style="color:#232323;">產品規劃思維(強化開發價值)&nbsp;→&nbsp;2B前、後台介面設計原型</div>
+                                <div class="list_note_tag" style="color:#232323;">產品規劃思維(強化開發價值)&nbsp;→&nbsp;2B前、後台介面設計</div>
                             </div>
                             <li>
                                 <div class="list_page_name">金融服務商&nbsp;<br>投資交易APP</div>
                                 <div class="list_line"></div><a id="p10_list" href="#p10" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">10</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag" style="color:#232323;">產品提案思維(強化營利循環)&nbsp;→&nbsp;2C介面設計原型</div>
+                                <div class="list_note_tag" style="color:#232323;">產品提案思維(強化營利循環)&nbsp;→&nbsp;2C產品介面設計</div>
                             </div>
                             <li>
                                 <div class="list_page_name">泰安產物&nbsp;活動網頁</div>
                                 <div class="list_line"></div><a id="p11_list" href="#p11" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">11</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">行銷視覺設計&nbsp;→&nbsp;前端原型製作</div>
+                                <div class="list_note_tag">行銷視覺設計&nbsp;→&nbsp;網頁原型產出</div>
                             </div>
                         </ul>
                     </div>
@@ -1117,6 +1117,7 @@
                                 <div><a href="sino_works_7.html"><span>*</span>運用AI工具</a>作為行動建議，解決受訪者痛點。</div>
                             </div>
                         </div>
+
                     </div>
 
                 </div>
