--- a/uiux_index.html
+++ b/uiux_index.html
@@ -2056,7 +2056,7 @@
 
         </div>
         <div class="pup_window_small_title_container">
-            <div class="pup_window_small_title emphasize_text">用戶原型入口</div>
+            <div class="pup_window_small_title emphasize_text">Figma用戶原型入口</div>
             <div class="pup_window_small_subtitle">選擇您目前的螢幕解析度</div>
         </div>
         <div class="pup_window_small_content">
