--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -337,6 +337,7 @@
                                                     <img src="images/sino_pic_14-26.png" class="sino_pic_6">
                                                 </picture>
                                             </div>
+                                            <div class="pup_normal_text_small emphasize_text" style="margin-top:20px;">可做為後續易用性測試、競品分析比較使用。</div>
                                         </div>
                                     </div>
                                 </div>
