--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1117,7 +1117,18 @@
                                 <div><a href="sino_works_7.html"><span>*</span>運用AI工具</a>作為行動建議，解決受訪者痛點。</div>
                             </div>
                         </div>
-
+                        <div class="work_info_subpart">
+                            <div class="work_info_subtitle h4 font_bold">
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品維運提案<span></span>
+                            </div>
+                            <div class="work_info_subtext">
+                                持續市場觀察、追蹤競品，評估目前產品型態、開發階段、優劣勢...等，根據決策者的商業目標，在專職領域上規劃執行方案。
+                            </div>
+                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                <img src="images/pup_link_dot.png" class="pup_link_dot">
+                                <span><a href="sino_works_8.html">維運提案-競品分析</a></span>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
